tests/paczka1/fuzzy1/53851296.err
Error in line 28: S215 S215 78,3
Error in line 40: Qw15MpCRp S215 369,87
